--- a/css/levii.css
+++ b/css/levii.css
@@ -1,79 +1,69 @@
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
+    font-family: sans-serif;
 }
 
-body {
-    font-family: "Helvetica Neue", sans-serif;
+h1 {
+    font-size: 48px;
+    font-weight: 200;
+}
+
+h2 {
+    font-size: 42px;
+    font-weight: 200;
+}
+
+.text-vertical-center {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
 }
 
 /* Header */
 .header {
+    display: table;
     width: 100%;
     height: 100%;
-    background: url(../img/bg.jpg) center center;
+    background-image: url('../img/bg.jpg');
     background-size: cover;
+    background-position: center center;
+}
+
+.header p {
+    font-size: 36px;
+    font-weight: 200;
 }
 
 /* Products */
 .products {
-    width: 100%;
-    height: 100%;
+    padding: 10% 0px;
+}
+
+.products h2 {
+    padding: 0px 0px 10% 0px;
+}
+
+.products img {
+    width: 256px;
+    max-width: 50%;
 }
 
 /* Company */
 .company {
-    width: 100%;
-    height: 100%;
+    padding: 10% 0px;
+}
+
+.company h2 {
+    padding: 0px 0px 10% 0px;
 }
 
 /* Footer */
 .footer {
-    width: 100%;
+    padding: 10px 0px;
 }
 
-
-
-
-.header{
-    display: table;
-    position: relative;
-/*    width: 100%;
-    height: 100%;
-    background: url(../img/bg.jpg) no-repeat center center scroll;
-/*    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;*/
-}
-
-.text-vertical-center{
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-}
-
-.text-vertical-center h1{
-    font-size: 5em;
-    font-weight: 100;
-}
-
-.text-vertical-center h3{
-    font-size: 3em;
-    font-weight: 100;
-}
-
-h2{
-    font-size: 3em;
-    font-weight: 100;
-}
-
-h3{
-    font-size: 2.5em;
-    font-weight: 100;
-}
-
-p{
-    font-size: 2em;
-    font-weight: 100;
+.footer p {
+    color: #777;
 }
