--- a/css/levii.css
+++ b/css/levii.css
@@ -2,17 +2,17 @@ html,
 body {
     width: 100%;
     height: 100%;
-    font-family: sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
 
 h1 {
     font-size: 48px;
-    font-weight: 200;
+    font-weight: 100;
 }
 
 h2 {
     font-size: 42px;
-    font-weight: 200;
+    font-weight: 100;
 }
 
 .text-vertical-center {
@@ -33,7 +33,7 @@ h2 {
 
 .header p {
     font-size: 36px;
-    font-weight: 200;
+    font-weight: 100;
 }
 
 /* Products */
@@ -53,6 +53,7 @@ h2 {
 /* Company */
 .company {
     padding: 10% 0px;
+    background-color: #F5F5F5;
 }
 
 .company h2 {
