--- a/css/levii.css
+++ b/css/levii.css
@@ -32,6 +32,7 @@ h3 {
     background-image: url('../img/bg.jpg');
     background-size: cover;
     background-position: center center;
+    color: #fff;
 }
 
 .header h1 {
