--- a/css/levii.css
+++ b/css/levii.css
@@ -2,7 +2,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 100;
 }
 
