--- a/css/levii.css
+++ b/css/levii.css
@@ -29,7 +29,7 @@ h3 {
     display: table;
     width: 100%;
     height: 100%;
-    background-image: url('../img/bg.jpg');
+    background-image: url('../images/bg.jpg');
     background-size: cover;
     background-position: center center;
     color: #fff;
