--- a/css/levii.css
+++ b/css/levii.css
@@ -16,6 +16,7 @@ body {
 /* Header */
 .header {
     display: table;
+    position: relative;
     width: 100%;
     height: 100%;
     background-image: url('../images/bg.jpg');
@@ -23,13 +24,30 @@ body {
     background-position: center center;
 }
 
-.header h1 {
+.header-language a {
+    text-decoration: none;
+    color: #9e9e9e;
+}
+
+.header-language a:hover {
+    color: #fff;
+}
+
+.header-language p {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #fff;
+    margin: 0;
+}
+
+.header-text h1 {
     font-weight: 100;
     color: #fff;
     margin: 0;
 }
 
-.header p {
+.header-text p {
     color: #fff;
     margin-top: 7px;
     margin-bottom: 0;
@@ -106,11 +124,11 @@ body {
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
 
-    .header h1 {
+    .header-text h1 {
         font-size: 5.4rem;
     }
 
-    .header p {
+    .header-text p {
         font-size: 2.1rem;
         margin-top: 1.05rem;
     }
