--- a/css/levii.css
+++ b/css/levii.css
@@ -2,7 +2,7 @@ html,
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Roboto', 'Noto Sans JP', sans-serif;
+    font-family: 'Roboto', 'source-han-sans-japanese', sans-serif;
     font-weight: 100;
     color: #212121;
 }
